2011-05-15  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-avt.c (avt.dirsep): new variable

2011-05-11  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-avt.c (laudio_play, laudio_loop):
	store reference to audio, so it isn't garbage collected while playing
	(lavt_quit_audio, lavt_wait_audio_end, lavt_stop_audio):
	clear stored audio-reference

2011-05-05  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-avt.c (lavt_long_menu):
	allow short menues, renamed to lavt_menu
	Lua function avt.menu as alias for avt.long_menu

2011-04-29  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-avt.c (lavt_long_menu): support for stacked tables

2011-04-27  Andreas K. Foerster  <info@akfoerster.de>

	* audio1.xpm, lua/akfavatar/audio1.lua: new files

2011-04-26  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_show_image_file, avt_show_image_stream)
	(avt_show_image_data, avt_show_image_xpm, avt_show_image_xbm)
	(avt_show_gimp_image):
	fix: on error clear the screen, not the balloon

2011-04-14  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-avt.c (lavt_optional => avt.optional): new function
	lua/akfavatar/avtdemo.lua, lua/audioplayer.lua: adapted

2011-04-05  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_ticks): new function
	lua/lua-avt.c (lavt_ticks => avt.ticks): new function

	* avatar.c (avt_wait): check if time is > 0

2011-04-04  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar/utf8.lua (utf8.to_latin1, utf8.from_latin1):
	new functions

	* lua/akfavatar/utf8.lua (utf8.to_ncr): new function
	  (utf8.from_ncr): renamed from utf8.ncr

2011-04-03  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-audio.c (playing): new variable
	many functions adapted (simplified)

	* lua/lua-akfavatar-prg.c (start_screen):
	explain [F11] and [Esc]

2011-04-01  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_pager):
	make sure the close button doesn't collide with textfield
